# BitSet

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  bitset.cpp  bitset.h  bitset.ipp
src/: main.cpp
test/: bitsetTest.cpp
